RSRVR-13 clean up GraalVM deps